--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -115,7 +115,7 @@
                     <i class="fas fa-list fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
-                    <textarea id="recipe_method" type="text" name="recipe_method"></textarea>
+                    <textarea id="recipe_method" name="recipe_method"></textarea>
                     <label class="add-label" for="recipe_method">method</label>
                 </div>
             </div>
