changed alt wording

--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -43,7 +43,7 @@
                 <!--Materialize card structure - image-->
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{{ cookbook.cookbook_image }}"
-                        alt="image of {{ cookbook.cookbook_name }}">
+                        alt="book cover for {{ cookbook.cookbook_name }}">
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
