--- a/templates/base.html
+++ b/templates/base.html
@@ -124,6 +124,8 @@
 
     <!--main content section for all templatge pages-->
     <main>
+        <!--Back to top button-->
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="far fa-arrow-alt-circle-up"></i></button>
 
         {% block content %}
 
