--- a/templates/login.html
+++ b/templates/login.html
@@ -15,14 +15,16 @@
                     <div class="row">
                         <div class="input-field col s12 m10 center-align reglog">
                             <i class="fas fa-user-alt prefix"></i>
-                            <input id="username" name="username" type="text" class="validate">
+                            <input id="username" name="username" type="text" minlength="5" maxlength="15"
+                                pattern="^[a-zA-Z0-9]{5,15}$" class="validate" requiredclass="validate">
                             <label for="username">username</label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s12 m10 center-align reglog">
                             <i class="fas fa-lock prefix"></i>
-                            <input id="password" name="password" type="password" class="validate">
+                            <input id="password" name="password" type="password" minlength="5" maxlength="15"
+                                pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                             <label for="password">password</label>
                         </div>
                     </div>
