added log off user story and fixed edit profile image

--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
                         <div class="input-field col s12 m10 center-align reglog">
                             <i class="fas fa-user-alt prefix"></i>
                             <input id="username" name="username" type="text" minlength="5" maxlength="15"
-                                pattern="^[a-zA-Z0-9]{5,15}$" class="validate" requiredclass="validate">
+                                pattern="^[a-zA-Z0-9]{5,15}$" class="validate" requiredclass="validate" required>
                             <label for="username">username</label>
                         </div>
                     </div>
