--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -33,7 +33,7 @@
                     <i class="fas fa-bread-slice fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10">
-                    <input id="recipe_name" name="recipe_name" type="text" class="validate">
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
                     <label class="add-label" for="recipe_name">recipe name</label>
                 </div>
                 <div class="col s1"></div>
@@ -44,7 +44,7 @@
                     <i class="fas fa-user fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10">
-                    <input id="recipe_chef" name="recipe_chef" type="text" class="validate">
+                    <input id="recipe_chef" name="recipe_chef" type="text" class="validate" required>
                     <label class="add-label" for="recipe_chef">recipe chef</label>
                 </div>
                 <div class="col s1"></div>
@@ -55,7 +55,7 @@
                     <i class="fas fa-book fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10">
-                    <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
+                    <input id="cookbook_name" name="cookbook_name" type="text" class="validate" required>
                     <label class="add-label" for="cookbook_name">recipe cookbook</label>
                 </div>
                 <div class="col s1"></div>
@@ -66,7 +66,7 @@
                     <i class="fas fa-camera fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10">
-                    <input id="recipe_image" name="recipe_image" type="text" class="validate">
+                    <input id="recipe_image" name="recipe_image" type="text" class="validate" required>
                     <label class="add-label" for="recipe_image">recipe image - add URL here</label>
                 </div>
                 <div class="col s1"></div>
@@ -77,7 +77,7 @@
                     <i class="fas fa-user-cog fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10">
-                    <input id="recipe_difficulty" name="recipe_difficulty" type="text" class="validate">
+                    <input id="recipe_difficulty" name="recipe_difficulty" type="text" class="validate" required>
                     <label class="add-label" for="recipe_difficulty">recipe difficulty</label>
                 </div>
                 <div class="col s1"></div>
@@ -88,7 +88,7 @@
                     <i class="fas fa-clock fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10">
-                    <input id="recipe_time" name="recipe_time" type="text" class="validate">
+                    <input id="recipe_time" name="recipe_time" type="text" class="validate" required>
                     <label class="add-label" for="recipe_time">recipe time</label>
                 </div>
                 <div class="col s1"></div>
@@ -99,7 +99,7 @@
                     <i class="fas fa-list fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10 input_ing_wrap">
-                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
+                    <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate" required>
                     <label class="add-label" for="recipe_ingredients">ingredients</label>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     <i class="fas fa-list fa-1x icon"></i>
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
-                    <textarea id="recipe_method" name="recipe_method"></textarea>
+                    <textarea id="recipe_method" name="recipe_method" required></textarea>
                     <label class="add-label" for="recipe_method">method</label>
                 </div>
             </div>
