added add-after to testing.md

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_chef" name="recipe_chef" type="text" class="validate" required>
-                    <label class="add-label" for="recipe_chef">recipe chef</label>
+                    <label for="recipe_chef">recipe chef</label>
                 </div>
                 <div class="col s1"></div>
             </div>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_time" name="recipe_time" type="text" class="validate" required>
-                    <label class="add-label" for="recipe_time">recipe time</label>
+                    <label class="add-label" for="recipe_time">recipe time - in minutes</label>
                 </div>
                 <div class="col s1"></div>
             </div>
