--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -34,7 +34,7 @@
             <!--display / edit recipe name-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-bread-slice fa-2x" id="icon"></i>
+                    <i class="fas fa-bread-slice fa-2x"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_name" name="recipe_name" value="{{ recipe.recipe_name }}" type="text"
@@ -45,7 +45,7 @@
             <!--display / edit recipe chef-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user fa-2x" id="icon"></i>
+                    <i class="fas fa-user fa-2x"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_chef" name="recipe_chef" value="{{ recipe.recipe_chef }}" type="text"
@@ -57,7 +57,7 @@
             <!--display / edit recipe cookbook name-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-book fa-2x" id="icon"></i>
+                    <i class="fas fa-book fa-2x"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="cookbook_name" name="cookbook_name" value="{{ recipe.cookbook_name }}" type="text"
@@ -69,7 +69,7 @@
             <!--display / edit recipe image URL-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-camera fa-2x" id="icon"></i>
+                    <i class="fas fa-camera fa-2x"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_image" name="recipe_image" value="{{ recipe.recipe_image }}" type="text"
@@ -81,7 +81,7 @@
             <!--display / edit recipe difficulty-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user-cog fa-2x" id="icon"></i>
+                    <i class="fas fa-user-cog fa-2x"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_difficulty" name="recipe_difficulty" value="{{ recipe.recipe_difficulty }}"
@@ -93,7 +93,7 @@
             <!--display / edit recipe time-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-clock fa-2x" id="icon"></i>
+                    <i class="fas fa-clock fa-2x"></i>
                 </div>
                 <div class="input-field col s10">
                     <input id="recipe_time" name="recipe_time" value="{{ recipe.recipe_time }}" type="text"
@@ -105,7 +105,7 @@
             <!--display / edit recipe ingredients-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-list fa-2x" id="icon"></i>
+                    <i class="fas fa-list fa-2x"></i>
                 </div>
                 <div class="input-field col s10 input_ing_wrap">
                     <!--jinja for loop to display every ingredient entry in array-->
@@ -124,7 +124,7 @@
             <!--display / edit recipe method-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-list fa-2x" id="icon"></i>
+                    <i class="fas fa-list fa-2x"></i>
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
                     <!--jinja for loop to display every method entry in array-->
@@ -138,6 +138,17 @@
                 <div class="col s1">
                     <a href="#" class="add_meth_button"><i class="far fa-plus-square"></i></a>
                 </div>
+            </div>
+            <!--display added by-->
+            <div class="row">
+                <div class="col s1">
+                    <i class="fas fa-user-alt fa-2x"></i>
+                </div>
+                <div class="input-field col s10">
+                    <input id="recipe_added" name="recipe_added" value="{{ recipe.recipe_added }}" type="text"
+                        class="validate">
+                </div>
+                <div class="col s1"></div>
             </div>
             <!--submit form to DB-->
             <div class="row">
