--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -70,7 +70,7 @@
                     <hr>
                     <span>{{ cookbook.cookbook_desc }}</span>
                     <!--if larder-admin is logged in they are able to edit or delete it from the DB-->
-                    {% if session.user|lower == "larder-admin"|lower %}
+                    {% if session.user|lower == "larderadmin"|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_cookbook', cookbook_id=cookbook._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_cookbook', cookbook_id=cookbook._id) }}"
