--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -46,7 +46,7 @@
                             class="btn red left">delete</a><br>
                     </div>
                     <!--jinja if statement to allow <a> tags to show if larder-admin is logged in-->
-                    {% elif session.user|lower == "larder-admin"|lower %}
+                    {% elif session.user|lower == "larderadmin"|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
