--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -70,7 +70,7 @@
                             class="btn red left">delete</a><br>
                     </div>
                     <!--if larder-admin is logged in they are able to edit or delete it from the DB-->
-                    {% elif session.user|lower == "larder-admin"|lower %}
+                    {% elif session.user|lower == "larderadmin"|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
