--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,14 +46,15 @@
                 <div class="col s8">
                     <span class="right"> ******** </span><br>
                 </div>
-            </div>
-            <div class="row center-align">
-                <!--if user is logged in they are able to edit or delete their profile from the DB-->
-                {% if session.user|lower == user.username|lower %}
-                <a href="{{ url_for('edit_profile', username=user.username|lower) }}" class="btn right">edit</a>
-                <a href="{{ url_for('delete_profile', username=user.username|lower) }}"
-                    class="btn red left">delete</a><br>
-                {% endif %}
+                <div class="row"></div>
+                <div class="row center-align">
+                    <!--if user is logged in they are able to edit or delete their profile from the DB-->
+                    {% if session.user|lower == user.username|lower %}
+                    <a href="{{ url_for('edit_profile', username=user.username|lower) }}" class="btn right">edit</a>
+                    <a href="{{ url_for('delete_profile', username=user.username|lower) }}"
+                        class="btn red left">delete</a><br>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
