changed type to email on register.html

--- a/templates/register.html
+++ b/templates/register.html
@@ -37,8 +37,8 @@
                     <!--user email info with pattern requirements and required-->
                     <div class="input-field col s12 reglog">
                         <i class="fas fa-envelope prefix"></i>
-                        <input id="user_email" name="user_email" type="text" minlength="5" maxlength="25"
-                            pattern="^[a-zA-Z0-9@.]{5,25}*$" class="validate" required>
+                        <input id="user_email" name="user_email" type="email" minlength="5" maxlength="25"
+                            class="validate" required>
                         <label for="user_email">user email</label>
                     </div>
                     <!--user password info with pattern requirements and required-->
