added title to images on hover

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -15,7 +15,7 @@
             <!--Card 1-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover">
+                    <div class="card-image hover" title="show starters">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_starters') }}"><img src="/static/images/starter.jpg" alt=""></a>
                         <a href="{{url_for('show_starters') }}"
@@ -30,7 +30,7 @@
             <!--Card 2-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover">
+                    <div class="card-image hover" title="show mains">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_mains') }}"><img src="/static/images/mains.jpg" alt=""></a>
                         <a href="{{url_for('show_mains') }}"
@@ -45,7 +45,7 @@
             <!--Card 3-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover">
+                    <div class="card-image hover" title="show desserts">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_desserts') }}"><img src="/static/images/dessert.jpg" alt=""></a>
                         <a href="{{url_for('show_desserts') }}"
@@ -63,7 +63,7 @@
             <!--Card 4-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover">
+                    <div class="card-image hover" title="show sides">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_sides') }}"><img src="/static/images/sides.jpg" alt=""></a>
                         <a href="{{url_for('show_sides') }}"
@@ -78,7 +78,7 @@
             <!--Card 5-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover">
+                    <div class="card-image hover" title="show cakes">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_cakes') }}"><img src="/static/images/biscuits.jpg" alt=""></a>
                         <a href="{{url_for('show_cakes') }}"
@@ -93,7 +93,7 @@
             <!--Card 6-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image hover">
+                    <div class="card-image hover" title="show drinks">
                         <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_drinks') }}"><img src="/static/images/drink.jpg" alt=""></a>
                         <a href="{{url_for('show_drinks') }}"
