--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -41,7 +41,7 @@
             <!--Materialize card format to show recipes-->
             <div class="card ">
                 <!--Materialize card structure - image and FAB-->
-                <div class="card-image waves-effect waves-block waves-light">
+                <div class="card-image waves-effect waves-block waves-light" title="more info">
                     <img class="activator" src="{{ recipe.recipe_image }}" alt="image of {{ recipe.recipe_name }}">
                 </div>
                 <div class=" card-content center-align">
