--- a/templates/sides.html
+++ b/templates/sides.html
@@ -16,7 +16,7 @@
             <!--Materialize card strucure-->
             <div class="card ">
                 <!--Materialize card structure - clickable image to activate reveal-->
-                <div class="card-image waves-effect waves-block waves-light">
+                <div class="card-image waves-effect waves-block waves-light" title="click for more info">
                     <img class="activator" src="{{ recipe.recipe_image }}" alt="image of {{ recipe.recipe_name }}">
                 </div>
                 <!--Materialize card structure - text below image-->
