--- a/templates/cakes.html
+++ b/templates/cakes.html
@@ -15,7 +15,7 @@
             <!--Materialize card strucure-->
             <div class="card ">
                 <!--Materialize card structure - clickable image to activate reveal-->
-                <div class="card-image waves-effect waves-block waves-light">
+                <div class="card-image waves-effect waves-block waves-light" title="click for more info">
                     <img class="activator" src="{{ recipe.recipe_image }}" alt="plate of food {{ recipe.recipe_name }}">
                 </div>
                 <!--Materialize card structure - text below image-->
