--- a/templates/add_cookbook.html
+++ b/templates/add_cookbook.html
@@ -13,9 +13,9 @@
             <!--add cookbook name-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-bread-slice fa-2x icon"></i>
+                    <i class="fas fa-bread-slice fa-2x icon hide-on-small-only"></i>
                 </div>
-                <div class="input-field col s10">
+                <div class="input-field col s11">
                     <input id="cookbook_name" name="cookbook_name" type="text" class="validate">
                     <label class="add-label" for="cookbook_name">cookbook name</label>
                 </div>
@@ -24,9 +24,9 @@
             <!--add cookbook chef-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-user fa-2x icon"></i>
+                    <i class="fas fa-user fa-2x icon hide-on-small-only"></i>
                 </div>
-                <div class="input-field col s10">
+                <div class="input-field col s11">
                     <input id="cookbook_chef" name="cookbook_chef" type="text" class="validate">
                     <label class="add-label" for="cookbook_chef">cookbook chef</label>
                 </div>
@@ -35,9 +35,9 @@
             <!--add cookbook image page URL from Amazon-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-book fa-2x icon"></i>
+                    <i class="fas fa-book fa-2x icon hide-on-small-only"></i>
                 </div>
-                <div class="input-field col s10">
+                <div class="input-field col s11">
                     <input id="cookbook_image" name="cookbook_image" type="text" class="validate">
                     <label class="add-label" for="cookbook_image">cookbook image - add Amazon image URL here</label>
                 </div>
@@ -46,9 +46,9 @@
             <!--add cookbook Amazon page URL-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-camera fa-2x icon"></i>
+                    <i class="fas fa-camera fa-2x icon hide-on-small-only"></i>
                 </div>
-                <div class="input-field col s10">
+                <div class="input-field col s11">
                     <input id="cookbook_amazon" name="cookbook_amazon" type="text" class="validate">
                     <label class="add-label" for="cookbook_amazon">cookbook amazon</label>
                 </div>
@@ -57,9 +57,9 @@
             <!--add cookbook description-->
             <div class="row">
                 <div class="col s1">
-                    <i class="fas fa-list fa-2x icon"></i>
+                    <i class="fas fa-list fa-2x icon hide-on-small-only"></i>
                 </div>
-                <div class="input-field col s10">
+                <div class="input-field col s11">
                     <textarea id="cookbook_desc" name="cookbook_desc" class="validate"></textarea>
                     <label class="add-label" for="cookbook_desc">cookbook description</label>
                 </div>
