--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                         <li><a href="#" class="dropdown-trigger" data-target="dropdown1">recipes</a></li>
                         <li><a href="{{ url_for('all_books') }}">bookshop</a></li>
                         <!--jinja if statement to restrict adding a cookbook to larder-admin only-->
-                        {% if session.user|lower == "larder-admin"|lower %}
+                        {% if session.user|lower == "larderadmin"|lower %}
                         <li><a href="{{ url_for('add_cookbook') }}">add cookbook</a></li>
                         {% endif %}
                         <!-- jinja if statement to restrict access to site unless user is logged in-->
@@ -92,7 +92,7 @@
             <li><a href="#" class="dropdown-trigger" data-target="dropdown2">recipes</a></li>
             <li><a href="{{ url_for('all_books') }}">bookshop</a></li>
             <!--jinja if statement to restrict adding a cookbook to larder-admin only-->
-            {% if session.user|lower == "larder-admin"|lower %}
+            {% if session.user|lower == "larderadmin"|lower %}
             <li><a href="{{ url_for('add_cookbook') }}">add cookbook</a></li>
             {% endif %}
             <!-- jinja if statement to restrict access to site unless user is logged in-->
