changed alignment of logged in

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -5,7 +5,7 @@
 <!--content container-->
 <div class="container">
     <!--show which user is logge in to the site-->
-    <p class="right-align">logged in: {{session.user}}</p>
+    <p class="center-align">logged in: {{session.user}}</p>
     <!--Materialize card-->
     <div class="row card-panel">
         <!--form to allow input of new recipe to DB-->
