--- a/templates/desserts.html
+++ b/templates/desserts.html
@@ -3,10 +3,10 @@
 
 <!--content container-->
 <div class="container">
-    <div class="row">
-        <h3 class="center-align">desserts</h3>
+    <div class="row center-align">
+        <h3>desserts</h3>
         <!--show which user is logged in to the site-->
-        <p class="right-align">logged in: {{session.user}}</p>
+        <p>logged in: {{session.user}}</p>
     </div>
     <div class="row">
         <!--jinja for loop to pull individual recipes from DB-->
