--- a/templates/sides.html
+++ b/templates/sides.html
@@ -3,10 +3,10 @@
 
 <!--content container-->
 <div class="container">
-    <div class="row">
-        <h3 class="center-align">sides</h3>
+    <div class="row center-align">
+        <h3>sides</h3>
         <!--show which user is logged in to the site-->
-        <p class="right-align">logged in: {{session.user}}</p>
+        <p>logged in: {{session.user}}</p>
     </div>
 
     <div class="row">
