--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -4,9 +4,9 @@
 <!--content container-->
 <div class="container">
     <div class="row">
-        <h3 class="center-align">drinks</h3>
+        <h3>drinks</h3>
         <!--show which user is logged in to the site-->
-        <p class="right-align">logged in: {{session.user}}</p>
+        <p>logged in: {{session.user}}</p>
     </div>
     <div class="row">
         <!--jinja for loop to pull individual recipes from DB-->
