--- a/templates/edit_cookbook.html
+++ b/templates/edit_cookbook.html
@@ -5,7 +5,7 @@
 <!--content container-->
 <div class="container">
     <!--show which user is logged in to the site-->
-    <p class="right-align">logged in: {{session.user}}</p>
+    <p class="center-align">logged in: {{session.user}}</p>
     <!--Materialize card-->
     <div class="row card-panel">
         <!--form to allow display and editing of cookbook info-->
