--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,11 +4,10 @@
 <!--content container-->
 <div class="container">
     <div class="row">
-        <div class="col s12">
-
-            <h3 class="center-align">recipes</h3>
+        <div class="col s12 center-align">
+            <h3>recipes</h3>
             <!--show which user is logged in to the site-->
-            <p class="right-align">logged in: {{session.user}}</p>
+            <p>logged in: {{session.user}}</p>
         </div>
     </div>
 
