--- a/templates/base.html
+++ b/templates/base.html
@@ -85,24 +85,24 @@
         <!--Materialize side nav bar for mobile/smaller devices-->
         <ul class="sidenav" id="mobile-demo">
             <li>
-                <h3 class="h3">larder</h3>
+                <h3 class="h3 center-align">larder</h3>
             </li>
             <li class="divider"></li>
-            <li><a href="{{ url_for('categories') }}">categories</a></li>
-            <li><a href="#" class="dropdown-trigger" data-target="dropdown2">recipes</a></li>
-            <li><a href="{{ url_for('all_books') }}">bookshop</a></li>
+            <li><a class="center-align" href="{{ url_for('categories') }}">categories</a></li>
+            <li><a class="center-align" href="#" class="dropdown-trigger" data-target="dropdown2">recipes</a></li>
+            <li><a class="center-align" href="{{ url_for('all_books') }}">bookshop</a></li>
             <!--jinja if statement to restrict adding a cookbook to larder-admin only-->
             {% if session.user|lower == "larderadmin"|lower %}
-            <li><a href="{{ url_for('add_cookbook') }}">add cookbook</a></li>
+            <li><a class="center-align" href="{{ url_for('add_cookbook') }}">add cookbook</a></li>
             {% endif %}
             <!-- jinja if statement to restrict access to site unless user is logged in-->
             {% if session.user|lower %}
-            <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
-            <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
-            <li><a href="{{ url_for('logout') }}">log out</a></li>
+            <li><a class="center-align" href="{{ url_for('add_recipe') }}">add recipe</a></li>
+            <li><a class="center-align" href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
+            <li><a class="center-align" href="{{ url_for('logout') }}">log out</a></li>
             {% else %}
-            <li><a href="{{ url_for('login') }}">log in</a></li>
-            <li><a href="{{ url_for('register') }}">register</a></li>
+            <li><a class="center-align" href="{{ url_for('login') }}">log in</a></li>
+            <li><a class="center-align" href="{{ url_for('register') }}">register</a></li>
             {% endif %}
         </ul>
     </header>
