--- a/templates/drinks.html
+++ b/templates/drinks.html
@@ -3,7 +3,7 @@
 
 <!--content container-->
 <div class="container">
-    <div class="row">
+    <div class="row center-align">
         <h3>drinks</h3>
         <!--show which user is logged in to the site-->
         <p>logged in: {{session.user}}</p>
